--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -252,7 +252,7 @@
               <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Open calcul priority&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
              </property>
              <property name="text">
-              <string>&quot;u221A&quot;</string>
+              <string>sqrt()</string>
              </property>
             </widget>
            </item>
