--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -37,21 +37,29 @@
     </property>
     <layout class="QVBoxLayout" name="mainLayout">
      <item>
-      <widget class="QLCDNumber" name="lcdNumber">
-       <property name="enabled">
-        <bool>true</bool>
-       </property>
-       <property name="minimumSize">
-        <size>
-         <width>0</width>
-         <height>50</height>
-        </size>
-       </property>
+      <widget class="QTextBrowser" name="resultDisplay">
        <property name="maximumSize">
         <size>
          <width>16777215</width>
          <height>50</height>
         </size>
+       </property>
+       <property name="font">
+        <font>
+         <pointsize>18</pointsize>
+        </font>
+       </property>
+       <property name="frameShape">
+        <enum>QFrame::Box</enum>
+       </property>
+       <property name="frameShadow">
+        <enum>QFrame::Sunken</enum>
+       </property>
+       <property name="readOnly">
+        <bool>true</bool>
+       </property>
+       <property name="cursorWidth">
+        <number>0</number>
        </property>
       </widget>
      </item>
