--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -243,7 +243,7 @@
           <item>
            <widget class="QPushButton" name="buttonSpace">
             <property name="toolTip">
-             <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Point, coma to write forward decimal floating value&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+             <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Space your calcul display, separate arguments on reverse polish calculator.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
             </property>
             <property name="text">
              <string>space</string>
@@ -300,7 +300,7 @@
             <item>
              <widget class="QPushButton" name="buttonSqrt">
               <property name="toolTip">
-               <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Open calcul priority&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+               <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Square root next argument, do not forget to close brackets to notify the end of your argument.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
               </property>
               <property name="text">
                <string>sqrt</string>
@@ -310,7 +310,7 @@
             <item>
              <widget class="QPushButton" name="buttonPow">
               <property name="toolTip">
-               <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Close calcul priority&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+               <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Rise left argument to the power of the second argument&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
               </property>
               <property name="text">
                <string>^</string>
@@ -395,6 +395,9 @@
         <layout class="QHBoxLayout" name="horizontalLayout_7">
          <item>
           <widget class="QPushButton" name="buttonPolish">
+           <property name="toolTip">
+            <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Toggle reverse polish calculator&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+           </property>
            <property name="text">
             <string>Toggle reverse polish</string>
            </property>
@@ -413,7 +416,7 @@
      <x>0</x>
      <y>0</y>
      <width>330</width>
-     <height>37</height>
+     <height>21</height>
     </rect>
    </property>
   </widget>
